Fix Host button alignment

--- a/resources/assets/sass/components/navbar.scss
+++ b/resources/assets/sass/components/navbar.scss
@@ -37,7 +37,7 @@
   }
 
   .nav {
-    margin: 8px 0;
+    margin: 11px 0;
     height: 40px;
 
     a {
